# first_board_test

./: Cargo.toml  flash.sh  memory.x  openocd.cfg  stm32l4x6.svd
.cargo/: config
src/: main.rs
