[package]
name = "first_board_test"
version = "0.1.0"
authors = ["Jonas Wolf"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }
stm32l4 = { version="0.7.1", features=["stm32l4x6", "rt"] }
